Hit MOZ_CRASH(nsFieldSetFrame::RemoveFrame not supported) at /builds/worker/workspace/build/src/layout/forms/nsFieldSetFrame.cpp:809
Categories
(Core :: Layout: Form Controls, defect, P4)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox73 | --- | wontfix |
| firefox74 | --- | wontfix |
| firefox75 | --- | fixed |
People
(Reporter: jkratzer, Assigned: MatsPalmgren_bugz)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, testcase, Whiteboard: [jsbugmon:confirmed])
Attachments
(3 files)
The following testcase crashes on mozilla-central rev 28418b02132f (build with --enable-debug --enable-fuzzing).
Hit MOZ_CRASH(nsFieldSetFrame::RemoveFrame not supported) at /builds/worker/workspace/build/src/layout/forms/nsFieldSetFrame.cpp:809
rax = 0x0000555785740340 rdx = 0x0000000000000000
rcx = 0x00007f00dd3e4e10 rbx = 0x00007f00ce335e40
rsi = 0x00007f00e8da78b0 rdi = 0x00007f00e8da6680
rbp = 0x00007fffa71fa670 rsp = 0x00007fffa71fa670
r8 = 0x00007f00e8da78b0 r9 = 0x00007f00e9f0e780
r10 = 0x0000000000000000 r11 = 0x0000000000000000
r12 = 0x00007f00ce3351b0 r13 = 0x00007fffa71fa830
r14 = 0x00007fffa71fa830 r15 = 0x00007f00ce335320
rip = 0x00007f00d6f42979
OS|Linux|0.0.0 Linux 5.3.0-28-generic #30~18.04.1-Ubuntu SMP Fri Jan 17 06:14:09 UTC 2020 x86_64
CPU|amd64|family 6 model 94 stepping 3|8
GPU|||
Crash|SIGSEGV|0x0|0
0|0|libxul.so|nsFieldSetFrame::RemoveFrame(mozilla::layout::FrameChildListID, nsIFrame*)|hg:hg.mozilla.org/mozilla-central:layout/forms/nsFieldSetFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|809|0x16
0|1|libxul.so|nsFieldSetFrame::EnsureChildContinuation(nsIFrame*, nsReflowStatus const&)|hg:hg.mozilla.org/mozilla-central:layout/forms/nsFieldSetFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|890|0xd
0|2|libxul.so|nsFieldSetFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/forms/nsFieldSetFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|634|0x16
0|3|libxul.so|nsBlockReflowContext::ReflowBlock(mozilla::LogicalRect const&, bool, nsCollapsingMargin&, int, bool, nsLineBox*, mozilla::ReflowInput&, nsReflowStatus&, mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockReflowContext.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|293|0x11
0|4|libxul.so|nsBlockFrame::ReflowBlockFrame(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|3796|0x3e
0|5|libxul.so|nsBlockFrame::ReflowLine(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|3143|0x19
0|6|libxul.so|nsBlockFrame::ReflowDirtyLines(mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|2686|0x20
0|7|libxul.so|nsBlockFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|1398|0xf
0|8|libxul.so|nsContainerFrame::ReflowChild(nsIFrame*, nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, mozilla::WritingMode const&, mozilla::LogicalPoint const&, nsSize const&, nsIFrame::ReflowChildFlags, nsReflowStatus&, nsOverflowContinuationTracker*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsContainerFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|906|0x1d
0|9|libxul.so|nsColumnSetFrame::ReflowChildren(mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&, nsColumnSetFrame::ReflowConfig const&, bool)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsColumnSetFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|727|0x3f
0|10|libxul.so|nsColumnSetFrame::ReflowColumns(mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&, nsColumnSetFrame::ReflowConfig&, bool)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsColumnSetFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|438|0x7
0|11|libxul.so|nsColumnSetFrame::FindBestBalanceBSize(mozilla::ReflowInput const&, nsPresContext*, nsColumnSetFrame::ReflowConfig&, nsColumnSetFrame::ColumnBalanceData, mozilla::ReflowOutput&, bool, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsColumnSetFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|1120|0x27
0|12|libxul.so|nsColumnSetFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsColumnSetFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|1239|0x3a
0|13|libxul.so|nsBlockReflowContext::ReflowBlock(mozilla::LogicalRect const&, bool, nsCollapsingMargin&, int, bool, nsLineBox*, mozilla::ReflowInput&, nsReflowStatus&, mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockReflowContext.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|293|0x11
0|14|libxul.so|nsBlockFrame::ReflowBlockFrame(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|3796|0x3e
0|15|libxul.so|nsBlockFrame::ReflowLine(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|3143|0x19
0|16|libxul.so|nsBlockFrame::ReflowDirtyLines(mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|2686|0x20
0|17|libxul.so|nsBlockFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|1398|0xf
0|18|libxul.so|nsBlockReflowContext::ReflowBlock(mozilla::LogicalRect const&, bool, nsCollapsingMargin&, int, bool, nsLineBox*, mozilla::ReflowInput&, nsReflowStatus&, mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockReflowContext.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|293|0x11
0|19|libxul.so|nsBlockFrame::ReflowBlockFrame(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|3796|0x3e
0|20|libxul.so|nsBlockFrame::ReflowLine(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|3143|0x19
0|21|libxul.so|nsBlockFrame::ReflowDirtyLines(mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|2686|0x20
0|22|libxul.so|nsBlockFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|1398|0xf
0|23|libxul.so|nsBlockReflowContext::ReflowBlock(mozilla::LogicalRect const&, bool, nsCollapsingMargin&, int, bool, nsLineBox*, mozilla::ReflowInput&, nsReflowStatus&, mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockReflowContext.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|293|0x11
0|24|libxul.so|nsBlockFrame::ReflowBlockFrame(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|3796|0x3e
0|25|libxul.so|nsBlockFrame::ReflowLine(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|3143|0x19
0|26|libxul.so|nsBlockFrame::ReflowDirtyLines(mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|2686|0x20
0|27|libxul.so|nsBlockFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|1398|0xf
0|28|libxul.so|nsContainerFrame::ReflowChild(nsIFrame*, nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, mozilla::WritingMode const&, mozilla::LogicalPoint const&, nsSize const&, nsIFrame::ReflowChildFlags, nsReflowStatus&, nsOverflowContinuationTracker*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsContainerFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|906|0x1d
0|29|libxul.so|nsCanvasFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsCanvasFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|749|0x1d
0|30|libxul.so|nsContainerFrame::ReflowChild(nsIFrame*, nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, mozilla::WritingMode const&, mozilla::LogicalPoint const&, nsSize const&, nsIFrame::ReflowChildFlags, nsReflowStatus&, nsOverflowContinuationTracker*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsContainerFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|906|0x1d
0|31|libxul.so|nsHTMLScrollFrame::ReflowScrolledFrame(mozilla::ScrollReflowInput*, bool, bool, mozilla::ReflowOutput*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|652|0x5
0|32|libxul.so|nsHTMLScrollFrame::ReflowContents(mozilla::ScrollReflowInput*, mozilla::ReflowOutput const&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|766|0x2f
0|33|libxul.so|nsHTMLScrollFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|1153|0x8
0|34|libxul.so|nsContainerFrame::ReflowChild(nsIFrame*, nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, int, int, nsIFrame::ReflowChildFlags, nsReflowStatus&, nsOverflowContinuationTracker*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsContainerFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|946|0x19
0|35|libxul.so|mozilla::ViewportFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/ViewportFrame.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|299|0x2b
0|36|libxul.so|mozilla::PresShell::DoReflow(nsIFrame*, bool, mozilla::OverflowChangedTracker*)|hg:hg.mozilla.org/mozilla-central:layout/base/PresShell.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|9241|0x21
0|37|libxul.so|mozilla::PresShell::ProcessReflowCommands(bool)|hg:hg.mozilla.org/mozilla-central:layout/base/PresShell.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|9414|0x11
0|38|libxul.so|mozilla::PresShell::DoFlushPendingNotifications(mozilla::ChangesToFlush)|hg:hg.mozilla.org/mozilla-central:layout/base/PresShell.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|4126|0x15
0|39|libxul.so|nsRefreshDriver::Tick(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp)|hg:hg.mozilla.org/mozilla-central:layout/base/nsRefreshDriver.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|2066|0x5
0|40|libxul.so|mozilla::RefreshDriverTimer::TickRefreshDrivers(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp, nsTArray<RefPtr<nsRefreshDriver> >&)|hg:hg.mozilla.org/mozilla-central:layout/base/nsRefreshDriver.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|351|0xb
0|41|libxul.so|mozilla::RefreshDriverTimer::Tick(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp)|hg:hg.mozilla.org/mozilla-central:layout/base/nsRefreshDriver.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|368|0x12
0|42|libxul.so|mozilla::VsyncRefreshDriverTimer::RefreshDriverVsyncObserver::TickRefreshDriver(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp)|hg:hg.mozilla.org/mozilla-central:layout/base/nsRefreshDriver.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|748|0xf
0|43|libxul.so|mozilla::VsyncRefreshDriverTimer::RefreshDriverVsyncObserver::NotifyVsync(mozilla::VsyncEvent const&)|hg:hg.mozilla.org/mozilla-central:layout/base/nsRefreshDriver.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|643|0xf
0|44|libxul.so|mozilla::layout::VsyncChild::RecvNotify(mozilla::VsyncEvent const&)|hg:hg.mozilla.org/mozilla-central:layout/ipc/VsyncChild.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|64|0x8
0|45|libxul.so|mozilla::layout::PVsyncChild::OnMessageReceived(IPC::Message const&)|s3:gecko-generated-sources:40b57a5f11db1f2975fc13c74f20fea3c72418dd5cc7be16b1724f135b6995163d22588c816f1fb7f6cdadad80e8ed2fcea1ccf234f0788643e6a5e4e1859c1e/ipc/ipdl/PVsyncChild.cpp:|187|0xb
0|46|libxul.so|mozilla::ipc::PBackgroundChild::OnMessageReceived(IPC::Message const&)|s3:gecko-generated-sources:2c00c6e8fe94c4488d1fca390aff0552cb4c3ce40484b98f953b8e69d8f06e217c2149c17ee88489855e4d63a022e5bc503c37aacdd686847caea60851863176/ipc/ipdl/PBackgroundChild.cpp:|5806|0xd
0|47|libxul.so|mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|2215|0x6
0|48|libxul.so|mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|2137|0xe
0|49|libxul.so|mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|1976|0xb
0|50|libxul.so|mozilla::ipc::MessageChannel::MessageTask::Run()|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|2007|0xc
0|51|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|1220|0xe
0|52|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|481|0x11
0|53|libxul.so|mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|87|0xa
0|54|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:28418b02132f1db7d9214f7cb77735fe85bb76cf|315|0x19
0|55|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:28418b02132f1db7d9214f7cb77735fe85bb76cf|290|0x8
0|56|libxul.so|nsBaseAppShell::Run()|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|137|0xd
0|57|libxul.so|XRE_RunAppShell()|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|944|0x6
0|58|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|237|0x5
0|59|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:28418b02132f1db7d9214f7cb77735fe85bb76cf|315|0x19
0|60|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:28418b02132f1db7d9214f7cb77735fe85bb76cf|290|0x8
0|61|libxul.so|XRE_InitChildProcess(int, char**, XREChildData const*)|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|779|0x8
0|62|firefox-bin|content_process_main(mozilla::Bootstrap*, int, char**)|hg:hg.mozilla.org/mozilla-central:ipc/contentproc/plugin-container.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|56|0x14
0|63|firefox-bin|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|303|0x13
0|64|libc-2.27.so||||0x21b97
0|65|firefox-bin|__cxa_throw_bad_array_new_length|hg:hg.mozilla.org/mozilla-central:build/unix/stdc++compat/stdc++compat.cpp:28418b02132f1db7d9214f7cb77735fe85bb76cf|82|0x12
0|66|firefox-bin||||0x10ea0
0|67|ld-2.27.so||||0x10733
0|68|libdl-2.27.so||||0x202d80
0|69|libpthread-2.27.so||||0x219bb0
0|70|firefox-bin||||0x10ea0
0|71|firefox-bin|_start|||0x29
| Reporter | ||
Comment 1•5 years ago
|
||
| Reporter | ||
Comment 2•5 years ago
|
||
| Reporter | ||
Comment 3•5 years ago
|
||
| Reporter | ||
Updated•5 years ago
|
Comment 4•5 years ago
|
||
Whoa, that's so rad :)
Mats, looks probably related to bug 1602430 and co. Maybe you can take a look?
| Assignee | ||
Comment 5•5 years ago
|
||
Heh, I forgot that we intentionally override these methods since we expect the frame constructor to re-create the entire FieldsetFrame sub-tree whenever anything related to a fieldset/legend changes. This was necessary when FieldsetFrame stored the rendered frame separately from its other child frames but it's probably not necessary now that we determine which child is the "rendered legend" during reflow instead.
Anyway, I'll fix the assertion here first (since it's trivial) and file a follow-up bug on changing the frame-ctor to not treat this case specially and removing these DEBUG methods:
https://searchfox.org/mozilla-central/rev/96f1457323cc598a36f5701f8e67aedaf97acfcf/layout/forms/nsFieldSetFrame.cpp#790-811
| Assignee | ||
Comment 6•5 years ago
|
||
| Assignee | ||
Comment 7•5 years ago
|
||
... and file a follow-up bug on changing the frame-ctor to not treat this case specially and removing these DEBUG methods
I was probably a bit too optimistic about that since we need to wrap our other children in an anon frame and I suspect it'll stay like that for the foreseeable future.
Comment 9•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
| Reporter | ||
Comment 10•5 years ago
|
||
| Reporter | ||
Updated•5 years ago
|
Description
•