Bug 1617753 - Avoid using our DEBUG version of RemoveFrame() which is supposed to never be called.  r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D64206

--HG--
extra : moz-landing-system : lando